# dotfiles

./: .envrc  .gitignore  .gitleaks.toml  .stow-local-ignore  AUDIT-TRACKER.md  AUDIT_CHANGELOG.md  AUDIT_PROGRESS.md  CHANGELOG-v8.0.0-DRAFT.md  CHANGELOG-v8.2.0-DRAFT.md  CHANGELOG-v8.3.0-DRAFT.md  CHANGELOG-v8.4.0-DRAFT.md  CHANGELOG-v8.5.0-DRAFT.md  CHANGELOG.md  CHANGELOG_NEW_ENTRY.md  COMPLETE_GUIDE.md  Cargo.toml  MASTER_GUIDE.md  PHILOSOPHY.md  PROGRESS.md  README.md  README.md.v3.1-backup  ROADMAP-v8.6.0.md  TOOLS.md  TOOL_AUDIT.md  TOOL_AUDIT_STATUS.md  backup.sh  bootstrap.sh  health-before-stow-fix.txt  install.sh  intent-ledger.md  keybindings.md  pkglist.txt
INCIDENTS/: .dotmeta
INTENT/: 064-rust-tools-improvements.md
archive/: CHANGELOG-v2.8.md  CHANGELOG-v3.1.md  CHANGELOG-v3.2.md  FUTURE_EXPLORATION.md  MIGRATION.md
automation/: .dotmeta  backup-dotfiles.sh  weekly-maintenance.sh
backups/: audit-commits.txt
brave/: THEMING.md
browser-brave/: THEMING.md
docs/: .dotmeta  ALIASES.md  ARCHITECTURE.md  AUDIT_CHECKLIST.md  BUILD.md  CHANGELOG-v3.3.1.md  COMPLETE_GUIDE.md  FAELIGHT-CLI.md  FAELIGHT-CONFIG.md  FAELIGHT-GIT.md  GREETD.md  HEALTH-ENGINE.md  KEYBINDINGS.md  MANUAL_INSTALLATION.md  MELD_GUIDE.md  PHILOSOPHY.md  POLICIES.md  QUICK_REFERENCE.md  RELEASE.md  TESTING-CHECKLIST.md  TESTING.md  THEORY_OF_OPERATION.md  TOOLING.md  TOOLS-REFERENCE.md  TOOLS.md  TOOL_REFERENCE.md  WORKFLOWS.md  faelight-link-design.md  faelight-link-research.md
fish/: config.fish
git/: .gitconfig
hooks/: .dotmeta  README.md  pre-commit
hypr/: autostart.conf  bindings.conf  hypridle.conf  hyprland.conf  looknfeel.conf  workspaces.conf
installation/: .dotmeta  01-backup.sh  02-bootstrap.sh
kitty/: kitty.conf
launcher-fuzzel/: .dotmeta
mako/: config
notif-mako/: .dotmeta
profiles/: .dotmeta  default.profile  gaming.profile  low-power.profile  work.profile
rust-tools/: .dotmeta
rust-tools/dot-doctor/: Cargo.toml  README.md
rust-tools/dot-doctor/src/: main.rs
rust-tools/faelight/: Cargo.toml  README.md
rust-tools/faelight-bar/: Cargo.toml  PROGRESS.md  README.md  SESSION_STATE.md
rust-tools/faelight-bar/src/: main.rs  main.rs.patch  state.rs
rust-tools/faelight-bar/src/input/: keyboard.rs  mod.rs
rust-tools/faelight-bar/src/menu/: filter.rs  items.rs  mod.rs
rust-tools/faelight-bar/src/render/: bar.rs  menu.rs  mod.rs
rust-tools/faelight-dmenu/: Cargo.toml  README.md
rust-tools/faelight-dmenu/src/: intents.rs  main.rs
rust-tools/faelight-dmenu/src/desktop/: mod.rs
rust-tools/faelight-dmenu/src/icons/: mod.rs
rust-tools/faelight-dmenu/src/search/: mod.rs
rust-tools/faelight-dmenu/src/ui/: mod.rs  renderer.rs
rust-tools/faelight-fm/: Cargo.toml  README.md  ROADMAP.md  WISHLIST.md  build-output.txt  test-intent.sh  test-ui.patch
rust-tools/faelight-fm/src/: app.rs  error.rs  lib.rs  main.rs
rust-tools/faelight-fm/src/daemon/: client.rs  mod.rs
rust-tools/faelight-fm/src/fs/: mod.rs  ops.rs  scan.rs
rust-tools/faelight-fm/src/git/: mod.rs
rust-tools/faelight-fm/src/input/: keys.rs  mod.rs  mode.rs  mouse.rs
rust-tools/faelight-fm/src/intent/: mod.rs
rust-tools/faelight-fm/src/model/: entry.rs  mod.rs
rust-tools/faelight-fm/src/ui/: colors.rs  filelist.rs  help.rs  info.rs  layout.rs  mod.rs  preview.rs  search.rs  status.rs  topbar.rs  zones.rs
rust-tools/faelight-fm/src/zones/: detect.rs  mod.rs
rust-tools/faelight-git/: Cargo.toml  README.md
rust-tools/faelight-git/src/: lib.rs  main.rs
rust-tools/faelight-git/src/commands/: branch.rs  commit.rs  log.rs  mod.rs  quick.rs  risk.rs  status.rs  sync.rs
rust-tools/faelight-git/src/git/: mod.rs  repo.rs
rust-tools/faelight-git/src/risk/: engine.rs  mod.rs
rust-tools/faelight-hooks/: Cargo.toml
rust-tools/faelight-hooks/src/: install.rs  main.rs
rust-tools/faelight-hooks/src/checks/: commitmsg.rs  conflicts.rs  mod.rs  prepush.rs  secrets.rs
rust-tools/faelight-launcher/: CHANGELOG_v7.4.0.md  Cargo.toml  README.md
rust-tools/faelight-launcher/examples/: test_search.rs
rust-tools/faelight-launcher/src/: lib.rs  main.rs
rust-tools/faelight-launcher/src/desktop/: icons.rs  mod.rs
rust-tools/faelight-launcher/src/search/: files.rs  mod.rs
rust-tools/faelight-link/: Cargo.toml  README.md
rust-tools/faelight-link/src/: main.rs
rust-tools/faelight-link/src/conflict/: mod.rs
rust-tools/faelight-link/src/link/: mod.rs
rust-tools/faelight-link/src/package/: mod.rs
rust-tools/faelight-menu/: Cargo.toml  README.md
rust-tools/faelight-menu/src/: main.rs
rust-tools/faelight-notify/: Cargo-test.toml  Cargo.toml  README.md
rust-tools/faelight-notify/src/: main-working-jan14.rs  main.rs  main.rs.fix  main.rs.patch
rust-tools/faelight-term/: Cargo.toml  FOOT-CONFIG.md  KNOWN_ISSUES.md  README.md  STATUS.md
rust-tools/faelight-term/src/: main.rs  main.rs.broken-mouse  pty.rs
rust-tools/faelight-update/: Cargo.toml  README.md
rust-tools/faelight-update/src/: cargo_checker.rs  main.rs  neovim_checker.rs  tui.rs
rust-tools/faelight/src/: config.rs  main.rs
scripts/: .dotmeta  archaeology-0-core  bump-system-version  bump-version  compile-changelog.sh  core-diff  core-protect  dot-doctor  dotctl  entropy-check  faelight  faelight-bar  faelight-bootstrap  faelight-dashboard  faelight-dmenu  faelight-git  faelight-launcher  faelight-lock  faelight-menu  faelight-notify  faelight-snapshot  faelight-stow  faelight-term  faelight-update  faelight-zone  fg  fu  get-version  graceful-poweroff  graceful-reboot  intent  intent-guard  keyscan  latest-update  omarchy-menu-fuzzel.sh  omarchy-menu-rofi.sh  power-menu-fuzzel.sh  power-menu-rofi.sh  profile  quick-note  (+7 more)
shell-nushell/: .dotmeta
shell-zsh/: .zshrc
stow/: .stow-local-ignore
system/: .dotmeta  README.md  crontab  snapper-root.conf
theme-gtk/: .dotmeta
theme-launch-fuzzel-dark/: .dotmeta
theme-term-foot-dark/: .dotmeta
theme-term-ghostty-dark/: .dotmeta
tools-topgrade/: .dotmeta
walker/: config.toml
waybar/: config.jsonc  style.css
wm-hypr/: bindings.conf  (+2 more)
(+342 files in other folders)
