[workspace]
resolver = "2"
members = [
    "rust-tools/*",
]

[workspace.package]
version = "8.3.0"
edition = "2021"
authors = ["Christian <christian@faelight.forest>"]
license = "MIT"

[workspace.dependencies]
# Wayland ecosystem
wayland-client = "0.31"
wayland-protocols = "0.31"
wayland-protocols-wlr = "0.2"
smithay-client-toolkit = "0.18"

# Serde ecosystem
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"

# Async runtime
tokio = { version = "1.35", features = ["full"] }

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# CLI
clap = { version = "4.4", features = ["derive"] }

# Utilities
chrono = "0.4"
dirs = "5.0"
fontdue = "0.9"
regex = "1.10"

# Fuzzy search
nucleo = "0.5"

# Terminal emulation
vte = "0.13"
nix = { version = "0.29", features = ["term", "process", "fs"] }
    "rust-tools/recent-files",
