[package]
name = "dot-doctor"
version = "0.3.0"
edition = "2021"
description = "Faelight Forest Health Engine"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
clap = { version = "4", features = ["derive"] }
colored = "2"

[profile.release]
opt-level = "z"
lto = true
strip = true
