[package]
name = "faelight-bar"
version = "2.0.0"
edition = "2021"

[[bin]]
name = "faelight-bar"
path = "src/main.rs"

[dependencies]
smithay-client-toolkit = { version = "0.19", default-features = false, features = ["calloop", "xkbcommon"] }
wayland-client = "0.31"
wayland-protocols-wlr = "0.3"
faelight-core = { path = "../faelight-core" }
chrono = "0.4"
nucleo = "0.5"
lazy_static = "1.4"
anyhow = "1.0"
thiserror = "1.0"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
