[package]
name = "faelight-dmenu"
version = "2.0.0"
edition = "2021"
description = "Generic selector for Faelight Forest"

[dependencies]
# Wayland (reuse from launcher)
wayland-client = "0.31"
smithay-client-toolkit = "0.19"
fontdue = "0.9"

# CLI
clap = { version = "4", features = ["derive"] }

# Utilities
colored = "2"

# Parsing (for intents)
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
walkdir = "2"

# Images & config (for apps mode)
image = "0.25"
toml = "0.8"

dirs = "5.0"
[profile.release]
opt-level = "z"
lto = true
strip = true

