[package]
name = "faelight-fm"
version = "0.1.0-beta"
edition = "2021"

[dependencies]
# TUI
ratatui = "0.28"
crossterm = "0.28"

# Async
tokio = { version = "1", features = ["net", "io-util", "rt", "rt-multi-thread", "macros"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Filesystem
walkdir = "2.4"
shellexpand = "3.1"

# Local dependencies
faelight-core = { path = "../faelight-core" }
faelight-zone = { path = "../faelight-zone" }

# Error handling
anyhow = "1.0"
thiserror = "1.0"

[[bin]]
name = "faelight-fm"
path = "src/main.rs"

[[bin]]
name = "test-intent"
path = "src/bin/test-intent.rs"

[lib]
name = "faelight_fm"
path = "src/lib.rs"
