[package]
name = "faelight-hooks"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
# CLI
clap.workspace = true

# Error handling
anyhow.workspace = true

# Config
serde.workspace = true
toml.workspace = true

# Utilities
regex.workspace = true
dirs.workspace = true

# Colors for terminal output
colored = "2.1"

[[bin]]
name = "faelight-hooks"
path = "src/main.rs"
