[package]
name = "faelight-launcher"
version = "3.3.0"
edition = "2021"

[dependencies]
image = "0.25"
smithay-client-toolkit = "0.19"
wayland-client = "0.31"
fontdue = "0.9"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
walkdir = "2"

[profile.release]
opt-level = 3
lto = true

