[package]
name = "faelight-link"
version = "1.0.0"
edition = "2021"
authors = ["Christian"]

[dependencies]
clap = { version = "4.5", features = ["derive"] }
colored = "2.1"
anyhow = "1.0"
walkdir = "2.5"
dialoguer = "0.11"
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"

# Our ecosystem libraries
faelight-zone = { path = "../faelight-zone" }
chrono = "0.4"
