[package]
name = "faelight-menu"
version = "0.6.0"
edition = "2021"
description = "Minimal Rust power menu for Wayland with safety confirmation"

[dependencies]
faelight-core = { path = "../faelight-core" }
smithay-client-toolkit = "0.19"
wayland-client = "0.31"

[profile.release]
opt-level = "z"
lto = true
strip = true

[dependencies.clap]
version = "4.5"
features = ["derive"]
