[package]
name = "faelight-menu"
version = "0.7.0"
edition = "2021"
authors = ["Christian <christian@faelight.forest>"]
license = "MIT"

[dependencies]
chrono = "0.4"
faelight-core = { path = "../faelight-core" }
smithay-client-toolkit = { version = "0.19", default-features = false, features = ["calloop", "xkbcommon"] }
wayland-client = "0.31"
wayland-protocols = { version = "0.31", features = ["client", "unstable"] }
wayland-protocols-wlr = { version = "0.2", features = ["client"] }

[[bin]]
name = "faelight-menu"
path = "src/main.rs"
