[package]
name = "faelight-notify"
version = "0.8.0"
edition = "2021"

[dependencies]
faelight-core = { path = "../faelight-core" }
smithay-client-toolkit = "0.19"
wayland-client = "0.31"
zbus = { version = "4", default-features = false, features = ["tokio"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "time"] }
nix = { version = "0.29", features = ["poll"] }

[profile.release]
opt-level = "z"
lto = true
strip = true
