[package]
name = "faelight-update"
version = "0.4.0"
edition = "2021"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
colored = "2.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
ratatui = "0.29"
crossterm = "0.28"
dialoguer = "0.11"
indicatif = "0.17"
tokio = { version = "1.0", features = ["full"] }
anyhow = "1.0"
regex = "1.10"
once_cell = "1.19"
chrono = { version = "0.4", features = ["serde"] }
