[package]
name = "faelight"
version = "1.0.0"
edition = "2021"
description = "Unified CLI for Faelight Forest"

[dependencies]
clap = { version = "4", features = ["derive"] }
colored = "2"
toml = "0.8"
serde = { version = "1", features = ["derive"] }

[profile.release]
opt-level = "z"
lto = true
strip = true
